Terraform_create_cluster_acr/dep01/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dimagrakh.azurecr.io/elearnimage:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP # CORRECTED: 'Cl' se 'ClusterIP' kiya
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
